Fixing Lexxy prompt menu spacing

--- a/app/assets/stylesheets/rich-text-content.css
+++ b/app/assets/stylesheets/rich-text-content.css
@@ -28,7 +28,7 @@
       }
     }
 
-    :where(ol, ul) {
+    :where(ol, ul):not(.lexxy-prompt-menu) {
       padding-inline-start: 3ch;
     }
 
